Bug 351133 - Options>Feeds 'Choose Application...' button is cut off and scroll-bar appears. r=mconnor, a=beltzner.

--- a/mozilla/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/mozilla/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -291,3 +291,9 @@ caption {
 }
 
 
+/**
+ * Feeds pane
+ */
+#chooseClientAppCell {
+  -moz-padding-end: 12px;
+}
